<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity"
    android:background="@drawable/ic_back">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white_transparent"
        app:cardCornerRadius="15sp"
        android:layout_margin="10sp"
        app:cardElevation="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="@string/inscription_title"
                    android:textColor="@color/black"
                    android:textSize="35sp"/>
                <TextView
                    android:id="@+id/error_inscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/inscription_error"
                    android:textSize="20dp"
                    android:visibility="gone"
                    android:textColor="#ff0000"/>
                <EditText
                    android:id="@+id/nom_inscription"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableRight="@drawable/ic_baseline_person_24"
                    android:hint="@string/nom_hint"
                    android:padding="15dp"/>

                <EditText
                    android:id="@+id/mdp_inscription"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableRight="@drawable/ic_baseline_lock_24"
                    android:inputType="textPassword"
                    android:hint="@string/mot_de_passe"
                    android:padding="15dp"/>
                <TextView
                    android:id="@+id/btnConnexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_connexion"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:layout_marginTop="35dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/inscription_button"
                        android:layout_width="150sp"
                        android:layout_height="60sp"
                        android:text="@string/inscription_button"
                        android:layout_marginTop="35dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="35dp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>