<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_back"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:cardBackgroundColor="@color/white_transparent"
        app:cardCornerRadius="15sp"
        app:cardElevation="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="452dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="@string/connexion_titre"
                    android:textColor="@color/black"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/errorConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/connexion_error"
                    android:textColor="#ff0000"
                    android:textSize="20dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/nomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/ic_baseline_person_24"
                    android:hint="@string/pseudo"
                    android:textColor="@color/black"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/passwordEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/ic_baseline_lock_24"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="@string/creer_compte"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/connectBtn"
                        android:layout_width="150sp"
                        android:layout_height="60sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="35dp"
                        android:text="@string/connexion_button" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_baseline_settings_24" />


</androidx.constraintlayout.widget.ConstraintLayout>